Adding files for step2

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,15 @@
      <script src="jspm_packages/system.js"></script>
      <script src="config.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>     
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>     
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
      <script>
+       System.trace = true
+       System.import('systemjs-hot-reloader/default-listener.js');
        System.import('app/main.js')
      </script>
-     <div id="root"></div>
+     <div id="react-redux-linked-prices-jon"></div>
+     <!-- <script src="new.min.js"></script> -->
    </body>
 </html>
 
